--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Historia-del-levantamiento-guerra-y-revolucion-de-Espana-3-de-5_69411
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69411-h/images/cover.jpg
 creator:
   author:
     agent_name: Toreno, José María Queipo de Llano Ruiz de Saravia, Conde de
@@ -20,6 +23,8 @@ creator:
     - https://en.wikipedia.org/wiki/Jos%C3%A9_Mar%C3%ADa_Queipo_de_Llano,_7th_Count_of_Toreno
     - https://es.wikipedia.org/wiki/Jos%C3%A9_Mar%C3%ADa_Queipo_de_Llano
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69411#Historia-del-levantamiento-guerra-y-revolucion-de-Espana-3-de-5
 gutenberg_issued: '2022-11-23'
 identifiers:
   gutenberg: '69411'
